update jobs.proto
